tests/miniJava/neg/004096_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java extends class java { public static void Main ( String [ ] java ) { { } } } java { }
